k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vod-tender
  labels:
    app: vod-tender
